A few commits previous hiddenDropdown aligning problem occured again and it was solved.

--- a/client/src/components/FixedTop/FixedNavbar/style.css
+++ b/client/src/components/FixedTop/FixedNavbar/style.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 768px) {
+   .navTitle{
+      padding-bottom: 25px;
+   }
+}
+
 /* ANİMASYON İÇİN KODLAR */
 .header-up {
     animation: headerUp ease-in-out 300ms;
@@ -65,13 +71,13 @@
 }
 
 .positionForOrnekVideolarFixedNavbar {
-    top: 4rem;
-    left: 20rem;
+    top: 2rem;
+    right: 0;
 }
 
 .positionForBizeUlasinFixedNavbar {
-    top: 4rem;
-    right: 11rem;
+    top: 2.8rem;
+    right: -1.5rem;
 }
 
 /* header sub menu arrow */
